--- a/datadog/helm/datadog-values.yaml
+++ b/datadog/helm/datadog-values.yaml
@@ -35,7 +35,7 @@ datadog:
   # logLevel: info
   ## Set global tags
   tags:
-    - env: dash2023
+    - env: k8slab
 
   ## Enable Log collections
   logs:
@@ -88,7 +88,7 @@ datadog:
           fieldPath: status.hostIP
   # Enable data to be sent with invalid certs (required for kind cluster)
     tlsVerify: false
-  clusterName: dash2023
+  clusterName: k8slab
 
   ## Set up global environment for agent and pods communication
   env:
