--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -16,7 +16,7 @@ kind: Deployment
 metadata:
   name: loadgenerator
   labels:
-      tags.datadoghq.com/env: "tsko2024"
+      tags.datadoghq.com/env: "k8slab"
       tags.datadoghq.com/service: "loadgenerator"
       tags.datadoghq.com/version: "1.0"
 spec:
