--- a/kubernetes-manifests/shippingservice.yaml
+++ b/kubernetes-manifests/shippingservice.yaml
@@ -17,7 +17,7 @@ kind: Deployment
 metadata:
   name: shippingservice
   labels:
-    tags.datadoghq.com/env: "tkso2024"
+    tags.datadoghq.com/env: "k8slab"
     tags.datadoghq.com/service: "shippingservice"
     tags.datadoghq.com/version: "0.5.0"
 spec:
@@ -28,7 +28,7 @@ spec:
     metadata:
       labels:
         app: shippingservice
-        tags.datadoghq.com/env: "tkso2024"
+        tags.datadoghq.com/env: "k8slab"
         tags.datadoghq.com/service: "shippingservice"
         tags.datadoghq.com/version: "0.5.0"
         admission.datadoghq.com/enabled: "true"
