--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -33,8 +33,7 @@ build:
   - image: checkoutservice
     context: src/checkoutservice
   - image: paymentservice
-    context: src/paymentservicejava
-    #context: src/paymentservice
+    context: src/paymentservice
   - image: currencyservice
     context: src/currencyservice
   - image: cartservice
