--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -51,7 +51,7 @@ build:
   local:
     # useBuildkit: false
     useBuildkit: true
-    push: false
+    push: true
 manifests:
   kustomize:
     paths:
