use apm single step instrumentation

--- a/datadog/operator/datadog-basic.yaml
+++ b/datadog/operator/datadog-basic.yaml
@@ -19,15 +19,12 @@ spec:
       enabled: true
       containerCollectAll: true
     apm:
-      enabled: true
-      hostPortConfig:
+      instrumentation:
         enabled: true
+        libVersions:
+          java: "1"
+          dotnet: "3"
+          python: "2"
+          js: "5"
     liveProcessCollection:
       enabled: true
-  override:
-    nodeAgent:
-      image:
-        tag: 7.49.1
-    clusterAgent:
-      image:
-        tag: 7.49.1
