--- a/datadog/operator/datadog-etcd.yaml
+++ b/datadog/operator/datadog-etcd.yaml
@@ -19,9 +19,13 @@ spec:
       enabled: true
       containerCollectAll: true
     apm:
-      enabled: true
-      hostPortConfig:
+      instrumentation:
         enabled: true
+        libVersions:
+          java: "1"
+          dotnet: "3"
+          python: "2"
+          js: "5"
     liveProcessCollection:
       enabled: true
   override:
@@ -30,8 +34,6 @@ spec:
         - effect: NoSchedule
           key: node-role.kubernetes.io/control-plane
           operator: Exists
-      image:
-        tag: 7.49.1
       extraConfd:
         configMap:
           name: datadog-checks
@@ -49,9 +51,6 @@ spec:
               readOnly: true
             - name: disable-etcd-autoconf
               mountPath: /etc/datadog-agent/conf.d/etcd.d
-    clusterAgent:
-      image:
-        tag: 7.49.1
 ---
 apiVersion: v1
 kind: ConfigMap
