add configmap to datadog namespace

--- a/datadog/datadog-etcd.yaml
+++ b/datadog/datadog-etcd.yaml
@@ -57,6 +57,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: datadog-checks
+  namespace: datadog
 data:
   etcd.yaml: |-
     ad_identifiers:
